# pg800

./: .gitignore  AUTHORS  Makefile.am  README  about.cc  about.h  autogen.sh  bulkdump.cc  bulkdump.h  bulkdump_exception.h  config.h.in  configure.ac  main.cc  midi.cc  midi.h  pg800.desktop  pg800.spec.in  preferences.cc  preferences.h  tone.cc  tone.h  tonechooser.cc  tonechooser.h  tonemodelcolumns.h  window.cc  window.h
